src/app/styles/app.scss
$container-min-padding: 10px;

@import "bootstrap-config";

@mixin respond-to($media) {
  @if $media == "screen-xs" {
    @media (min-width: $screen-xs-min) and (max-width: $screen-xs-max) { @content; }
  }
  @else if $media == "screen-sm" {
    @media (min-width: $screen-sm-min) and (max-width: $screen-sm-max) { @content; }
  }
  @else if $media == "screen-md" {
    @media (min-width: $screen-md-min) and (max-width: $screen-md-max) { @content; }
  }
  @else if $media == "screen-lg" {
    @media (min-width: $screen-lg-min) { @content; }
  }
  @else {
    @content;
  }
}

@mixin vendor-prefix($name, $argument) {
  -webkit-#{$name}: #{$argument};
  -ms-#{$name}: #{$argument};
  -moz-#{$name}: #{$argument};
  -o-#{$name}: #{$argument};
  #{$name}: #{$argument};
}

$top-font-color: #bfbfbf;
$top-height: 70px;
$top-height-collapsed: 60px;
$top-font-size: 11pt;
$top-padding-top: ($top-height / 2) - ($top-font-size / 2);
$top-padding-top-collapsed: ($top-height-collapsed / 2) - ($top-font-size / 2);

$body-padding: 30px;
$body-font-size-xs: 12pt;
$body-font-size: 14pt;

$title-font: 'Myriad Pro Semibold';
$body-font: 'Open Sans';

$icomoon-font-path: "fonts/oneicons";
@import "oneicons/style.scss";

@import "colors-common";
@import "onedata-common";
@import "colors";
@import "fonts";
@import "main-menu";
@import "login";
@import "onezone";
@import "provider-place";
@import "provider-place-drop";
@import "dropdowns";
@import "common-loader";
@import "modal";
@import "button";
@import "spin-button-base";
@import "modal-types";
@import "message-box-modal";
@import "one-option-button";

html, body {
  height: 100%;
  font-family: $body-font !important;
}

.global-fog {
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: -1;
  background: none;
  transition: background 0.5s;

  &.active {
    z-index: 999;
    background: rgba(41, 41, 41, 0.6);
    // the same as collapsing animation
    transition: background 0.35s;

    // fog should be always hidden if desktop view
    @media (min-width: $grid-float-breakpoint) {
      display: none;
    }
  }
}

// no image should overflow its parent
img {
  max-width: 100%;
}


// some small classes to quick change any element

.top-right-fixed {
  position: fixed;
  top: 0;
  right: 0;
}
.align-left {
  text-align: left;
}
.align-center {
  text-align: center;
}
.align-right {
  text-align: right;
}

html:not(.test-runner) {
  // TODO: background size is corrupted on mobile devices (Android Chrome)
  background-image: url('/assets/images/main-background.jpg');
  background-repeat: no-repeat;
  background-position: center center;
  @include vendor-prefix(background-attachment, fixed);
  @include vendor-prefix(background-size, cover);

  body {
    padding: 0;
    margin: 0;

    @include respond-to(screen-xs) {
      font-size: $body-font-size-xs;
    }

    @include respond-to(screen-non-xs) {
      font-size: $body-font-size;
    }

    color: #fff;
    background: transparent;

    h1 {
      font-family: 'Myriad Pro Semibold', 'Open Sans', sans-serif;

      @include respond-to(screen-xs) {
        font-size: $body-font-size-xs * 2.3;
      }
      @include respond-to(screen-non-xs) {
        font-size: $body-font-size * 2.3;
      }

      text-transform: uppercase;
      letter-spacing: 0.1em;
    }

    h2 {
      font-family: 'Myriad Pro Semibold', 'Open Sans', sans-serif;
      @include respond-to(screen-xs) {
        font-size: $body-font-size-xs * 1.5;
      }
      @include respond-to(screen-non-xs) {
        font-size: $body-font-size * 1.5;
      }
      font-weight: normal;
    }
  }
}

.conainter-content {
  padding: $body-padding;
}

/*** Some additional helper CSS classes ***/

// centered columns styles

.row-centered {
    text-align:center;
}
.col-centered {
    display:inline-block;
    float:none;
    /* reset the text-align */
    text-align:left;
    /* inline-block space fix */
    margin-right:-4px;
}

@include respond-to(screen-sm) {
  .sm-col-centered {
    display:inline-block;
    float:none;
    /* reset the text-align */
    text-align:left;
    /* inline-block space fix */
    margin-right:-4px;
  }
}


// Conditional alignment

.xs-left {
  @include respond-to(screen-xs) {
    text-align: left !important;
  }
}

.xs-right {
  @include respond-to(screen-xs) {
    text-align: right !important;
  }
}

.xs-center {
  @include respond-to(screen-xs) {
    text-align: center !important;
  }
}

.sm-center {
  @include respond-to(screen-sm) {
    text-align: center !important;
  }
}

.xs-two-col-center {
  &:nth-child(odd) {
    @include respond-to(screen-xs) {
      text-align: right !important;
    }
  }
  &:nth-child(even) {
    @include respond-to(screen-xs) {
      text-align: left !important;
    }
  }
}

@include respond-to(screen-xs) {
  .col-sm-last-1:last-child:nth-child(odd):nth-last-child(1) {
    width: 100%;
    text-align: center !important;
  }
}


// TODO: real style for various contexts
input {
  font-family: 'Open Sans';
  color: black;
}

// TODO: there general-purpose classes should be moved to deps/gui styles

.full-width {
  display: block;
  width: 100%;
}

.clickable {
  cursor: pointer; cursor: hand;
}

.non-clickable {
  cursor: default !important;
}

.hover-parent {
  .white-on-parent-hover {
    color: transparent !important;
  }
  &:hover {
    .white-on-parent-hover {
      color: white !important;
    }
  }
}

.input-with-button {
  display: table;
  width: 100%;

  > * {
    display: table-cell;
  }

  > *:first-child {
    width: 100%;
  }

  input, .form-control {
    height: 42px !important;
    text-overflow: ellipsis;
  }

  .btn {
    // a hack to pull up - notice, other than in oneprovider
    margin-top: -3px;

    width: 48px;

    padding-top: 0;
    padding-bottom: 0;
    height: 42px;
    padding-left: 4px;
    padding-right: 4px;

    .one-icon {
      font-size: 32px;
    }
  }
}

.one-row {
  display: table;
  > * {
    display: table-cell;
    vertical-align: middle;
  }
}

.loading-throbber {
  width: 32px;
  height: 32px;
  background-image: url("/assets/images/loading-32.gif");
  background-position: center;
  background-repeat: no-repeat;

  &.inverted {
    background-image: url("/assets/images/loading-32-inverted.gif");

    &.with-background {
      background-color: black;
    }
  }

  &.with-background {
    background-size: 24px 24px;
    border-radius: 4px;
    background-color: white;
  }
}
.loading-label {
  padding-left: 15px;
}

// loading state for sidebar element
.sidebar-item-is-loading {
  * {
    pointer-events: none;
    color: rgba(white, 0.5) !important;
  }
}

.text-center {
  text-align: center !important;
}

@include respond-to(screen-sm) {
  .sm-text-center {
    text-align: center !important;
  }
}

@include respond-to(screen-lg) {
  .col-1-of-7-lg {
    width: 14.285714285714285714285714285714%;
  }
}

@include respond-to(screen-md) {
  .col-1-of-7-md {
    width: 14.285714285714285714285714285714%;
  }
}

.application-error {
  text-align: center;

  .application-error-icon {
    font-size: 256px;
  }
}

